refactor domain, application, config: apply Builder pattern to Price model, improve logging and externalize configuration to environment variables